--- a/css/lck.css
+++ b/css/lck.css
@@ -48,6 +48,15 @@ body._lock .header__inner{
     top: 0;
     left: 0;
 }
+.page-load__bg img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(30%);
+    top: 0;
+    left: 0;
+} 
 
 .page-load p{
     position: relative;
