--- a/css/lck.css
+++ b/css/lck.css
@@ -1,6 +1,7 @@
 html{
     font-size: 10px;
     scroll-behavior: smooth;
+    overflow: hidden;
 }
 
 body{
@@ -15,7 +16,6 @@ body._lock{
 body._lock .header__inner{
     opacity: 0;
 }
-
 
 .page-load.hide{
     z-index: -99;
@@ -38,6 +38,17 @@ body._lock .header__inner{
    
 }
 
+
+.page-load__bg img{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    filter: brightness(30%);
+    top: 0;
+    left: 0;
+} 
+
 .page-load__bg{
     height: 100%;
     width: 100%;
@@ -48,15 +59,6 @@ body._lock .header__inner{
     top: 0;
     left: 0;
 }
-.page-load__bg img{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(30%);
-    top: 0;
-    left: 0;
-} 
 
 .page-load p{
     position: relative;
@@ -80,6 +82,10 @@ body._lock .header__inner{
 		filter: hue-rotate(0deg);
 	}
 }
+
+
+
+
 
 .wrapper{
     min-height: 100%;
@@ -796,8 +802,9 @@ canvas{
 .before{
     background: url('../img/Mask\ group.jpg') no-repeat;
     background-size: cover;
-    background-position:top left;
-    padding: 30% 0 20% 0;
+    background-position:top center;
+    padding: 100% 0 20% 0;
+    min-height: 100vh;
 }
 
 .before__inner{ 
